--- a/index.html
+++ b/index.html
@@ -13,8 +13,35 @@
 	
 	<body>
 	
-		<h1>Welcome to the Bag O' Dice</h1>
+	<header>
+		<h1>Bag O' Dice V 2.0</h1>
+	</header>
 	
+	<section id="diceSelection">
+		<fieldset>
+		
+			<h3>Which dice should I roll?</h3>
+			<select id="diceSelector">
+				<option value="default">Select One</option>
+				<option value="4">D4</option>
+				<option value="6">D6</option>
+				<option value="8">D8</option>
+				<option value="10">D10</option>
+				<option value="12">D12</option>
+				<option value="20">D20</option>
+				<option value="100">D00</option>
+			</select>		
+			
+			<h3>How many?</h3>
+			<input type="text" id="diceMultiplier" />
+			
+			<br /><br />
+			<input type="button" value="Roll Dice" onClick="rollDice()"/>
+			
+		</fieldset>
+		
+	</section>
+		
 	</body>
 
 </html>
