--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<section id="diceSelection">
 		<fieldset>
 		
-			<h3>Which dice should I roll?</h3>
+			<h3>Choose your weapon?</h3>
 			<select id="diceSelector">
 				<option value="default">Select One</option>
 				<option value="4">D4</option>
@@ -39,6 +39,11 @@
 			<input type="button" value="Roll Dice" onClick="rollDice()"/>
 			
 		</fieldset>
+		
+		<h3>Roll Values</h3>
+		<div id="dice_output"><p>&nbsp;</p></div>
+		<h3>Dice Total</h3>
+		<div id="dice_total"><p>&nbsp;</p></div>
 		
 	</section>
 		
